# intelligence_eval

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
cmn_pckgs/: __init__.py  logger.py
cmn_pckgs/puppet/: README.md  chatgpt_eval.py  chatgpt_login.ts  chatgpt_puppet.ts  chatgpt_srv.ts  scheduler_queue.ts  template.private.env  tsconfig.json  types.d.ts
cmn_pckgs/puppeteer/: README.md  chatgpt_eval.py  chatgpt_login.ts  chatgpt_puppet.ts  chatgpt_srv.ts  scheduler_queue.ts  tsconfig.json  types.d.ts
cmn_pckgs/python/: logger.py
ml/: code_ml_model.py  dataset_creationpt2.py  dataset_creationpt3.py  pipeline.py
prompts/hle/: HLE_SYS_PROMPT_EX.md  HLE_SYS_PROMPT_MC.md
prompts/mmlu_pro/: MMLU_PRO_5SHOT.md
src/: async_llm_call.py  eval_json_parser.py  get_datasets.py  get_hle_dataset.py  hle_eval_server.py  hle_server.py  intelligence_server.py  intelligence_srv.py  payloads.py
src/deprecated/: direct_model_test_hle.py  direct_model_test_mmlu_pro.py
src/gpqa_diamond/: payloads_gpqa.py  total_eval_process_gpqa.py
src/hle/: payloads_hle.py  total_eval_process_hle.py
src/livebench/: payloads_livebench.py  total_eval_process_livebench.py
src/livecodebench/: payloads_lcb.py  total_eval_process_lcb.py
src/math_evals/: MLE.py
src/mmlu_pro/: payloads_mmlu_pro.py  total_eval_process_mmlu_pro.py
tests/: hle_test.py  test_agent_srv.py  test_post.py
